k8s/all-in-one.yaml
---
# Source: spacetrouble/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-spacetrouble
  labels:
    helm.sh/chart: spacetrouble-0.1.0
    app.kubernetes.io/name: spacetrouble
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: spacetrouble
    app.kubernetes.io/instance: release-name
---
# Source: spacetrouble/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-spacetrouble
  labels:
    helm.sh/chart: spacetrouble-0.1.0
    app.kubernetes.io/name: spacetrouble
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: spacetrouble
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spacetrouble
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-spacetrouble
      securityContext:
        {}
      containers:
        - name: spacetrouble
          securityContext:
            {}
          image: "lexicoder/spacetrouble-booking-server:main"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/health
              port: http
          readinessProbe:
            httpGet:
              path: /v1/health
              port: http
          resources:
            {}
---
# Source: spacetrouble/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-spacetrouble
  labels:
    helm.sh/chart: spacetrouble-0.1.0
    app.kubernetes.io/name: spacetrouble
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "nip.io"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-spacetrouble
                port:
                  number: 80
---
# Source: spacetrouble/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-spacetrouble-test-connection"
  labels:
    helm.sh/chart: spacetrouble-0.1.0
    app.kubernetes.io/name: spacetrouble
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-spacetrouble:80/v1/health']
  restartPolicy: Never
